pathfinding renderer works!! (pathlines not showing up though..)